[project]
name = "LeakyBucketRateLimiter"
version = "0.1.0"
description = "Implementation of Rate Limiter(Leaky Bucket) based on Redis cache engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.9.10",
    "redis>=5.2.1",
]

[tool.ruff]
line-length = 88  # Recommended length for readability
select = [
    "E101",  # IndentationError (wrong indentation level)
    "E701",  # Multiple statements on one line (use semicolons properly)
    "E702",  # Multiple statements on one line (semicolon without appropriate spacing)
    "E703",  # Statement ending with a semicolon
    "E711",  # Comparison to None (use 'is' or 'is not' instead of '==')
    "E712",  # Comparison to True/False (use 'is' instead of '==')
    "W191",  # Indentation contains tabs (should use spaces)
    "W291",  # Trailing whitespace
    "W293",  # Blank line contains whitespace
    "W391",  # Blank line at the end of file
    "F401",  # Unused import
    "F403",  # Import * used
    "F821",  # Undefined name
    "C901",  # Function is too complex (too many branches or statements)
]
